Fix elements overlapping when zoomed into page

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,8 +9,8 @@
 
 .main{
   background-color: var(--bg);
-  height: 100dvh;
-  width: 100dvw;
+  min-height: 100dvh;
+  min-width: 100dvw;
   display: flex;
   flex-direction: column;
   flex-direction: center;
